--- a/app/public/index.css
+++ b/app/public/index.css
@@ -73,10 +73,14 @@ width: 20%;
   flex-grow: 1;
 }
 
+.flex-grow-1{
+  flex-grow: 1;
+}
+
 .flex-grow-2{
   flex-grow: 2;
-  width:20%;
 }
+
 
 #notPermission{
   display: none;
@@ -95,7 +99,7 @@ width: 20%;
 }
 progress{
   width: 100%;
-  height: 10px;
+  height: 20px;
 }
 
 .progress-group{
