--- a/app/public/index.css
+++ b/app/public/index.css
@@ -24,6 +24,15 @@ color:blueviolet;
 font-size: 2rem;
 }
 
+h4{
+font-size: 1.5rem;
+}
+
+input{
+  font-size: 2.5rem;
+  font-weight: bold;
+}
+
 .btn{
 height:4em;
 width: 100%;
@@ -48,7 +57,8 @@ a.btn{
 
 .btn-sm{
 height:3em;
-font-size: 1em;
+font-size: 1.2em;
+font-weight: bold;
 width: 20%;
 }
 
@@ -63,6 +73,7 @@ width: 20%;
 
 .flex{
   display: flex;
+  align-items: center;
 }
 
 .w-100{
@@ -81,13 +92,17 @@ width: 20%;
   flex-grow: 2;
 }
 
+#conn-info{
+  align-items: center;
+}
 
 #notPermission{
   display: none;
 }
 
 #teamColor{
-  width: 100px;
+  width: 110px;
+  height: 60px;
   margin: 1em;
 }
 
